# dom-extract

./: .gitignore  README.md  pyproject.toml
dom_extract/: __init__.py  extractor.py  notebook.ipynb
output/: 57岁陆奇新冒险要在中国寻找10年后的谷歌苹果.html  AI 眼中薛定谔的猫是死是活新春特辑.html  Doctor Curious 37詹姆斯韦伯太空望远镜的八角星芒.html  Nature重磅华人团队研究证实牛肉及乳制品中的这种营养物质可提高癌症治疗效果.html  SUSTech科研说  一往无前的光陈绝缘体进入三维时代.html  一件你每天都会做的事可能就是掉发加重的元凶.html  一定要试试这10个在家就能轻松完成的科学小实验赶快带娃玩起来.html  一文告诉你怎样火起来.html  上帝玩过的俄罗斯方块.html  中国225万平方公里的热带疆域在哪里.html  中国小众宝藏古镇在哪里.html  中国的五谷到底从哪里来.html  为什么你感受不到数学的趣味看了这篇还没爱上数学的我没见过.html  为什么我们会喜欢看悲伤的电影.html  为什么我们看啥都是脸可能是信了大脑的邪.html  为什么有的人一直精力充沛而有的人却无精打采.html  为什么要啪啪啪.html  为什么说朝霞不出门晚霞行千里.html  人心中隐秘的角落为何会让爱走向毁灭心理咨询师说.html  人生行囊如何打包Geek教你写真正科学的高考作文.html  人类智力超群的重要原因找到了科学研究颠覆对大脑认知.html  人类的尽头是多巴胺.html  什么是中国人的家.html  什么是科学上帝是否存在 波普尔的证伪理论及其常见的误解.html  什么海菠萝的海.html  你能秒杀我 但是你知道秒是怎么来的吗.html  你还没见过流星有人已经拍到彩色的了.html  修复破碎的森林让大象回家.html  光的量子拓扑态及其实验观测.html  冰封的退却委内瑞拉不止失去了最后的冰川也失去了古老的传说.html  初夏第一果中国到底哪里的杨梅最好吃.html  别忘了冰墩墩的好伙伴雪容融他不是不红只是还没上班.html  动物奇葩行为大赏最后一个胆小慎点.html  北京老字号西饼店里的爱与恨全都一口咽下.html  十大科学新闻带你回顾2024年的科学大事件.html  古人为了喝一口酒到底研究了多少种方法.html  可以用镜子困住光吗 No359.html  哪种语言的效率最高是汉语吗.html  国民深爱的中国乒乓球是如何崛起的.html  在一杯雨水中我们饮下了宇宙.html  (+65 more)
texts/: 0 (2).html  0.html  1 (2).html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2 (2).html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3 (2).html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4 (2).html  (+66 more)
